# Forge

./: .gitignore  CMakeLists.txt  app  build.bat  build.sh
game/: project.toml
game/src/: main.cpp
src/: main.cpp
src/cli/: cli.cpp  cli.h
src/commands/: build.cpp  init.cpp  run.cpp
